# ComfyUI-Manager

./: .gitignore  MANIFEST.in  README.md  __init__.py  alter-list.json  backup.py  channels.list  channels.list.template  check.sh  cm-cli.py  cm-cli.sh  custom-node-list.json  extension-node-map.json  extras.json  git_helper.py  github-stats.json  json-checker.py  model-list.json  pip_overrides.osx.template  prestartup_script.py  pyproject.toml  requirements.txt  ruff.toml  scan.sh  scanner.py
.github/workflows/: publish.yml
comfyui_manager/: __init__.py  cm-cli.py  prestartup_script.py
comfyui_manager/glob/: cnr_utils.py  git_helper.py  manager_core.py  manager_downloader.py  manager_server.py  manager_util.py  node_package.py  share_3rdparty.py
comfyui_manager/js/: cm-api.js  comfyui-manager.js  comfyui-share-common.js  comfyui-share-openart.js  comfyui-share-youml.js  common.js  components-manager.js  custom-nodes-manager.js  model-manager.js  node_fixer.js  snapshot.js  workflow-metadata.js
components/: .gitignore
docs/: index.html
docs/en/: cm-cli.md
docs/ko/: cm-cli.md
glob/: cm_global.py  cnr_utils.py  git_utils.py  git_wrapper.py  manager_core.py  manager_downloader.py  manager_server.py  manager_util.py  node_package.py  security_check.py  share_3rdparty.py
js/: a1111-alter-downloader.js  cm-api.js  comfyui-manager.js  comfyui-share-common.js  comfyui-share-copus.js  comfyui-share-openart.js  comfyui-share-youml.js  comfyui-share.js  common.js  component-builder.js  components-manager.js  custom-nodes-downloader.js  custom-nodes-manager.css  custom-nodes-manager.js  model-downloader.js  model-manager.css  model-manager.js  node_fixer.js  popover-helper.js  snapshot.js  terminal.js  turbogrid.esm.js  workflow-metadata.js
migration_js/: migration.js
modules/: manager_ext_core.py  manager_ext_server.py  manager_ext_util.py  migration_server.py
node_db/dev/: custom-node-list.json  extension-node-map.json  github-stats.json  scan.sh
node_db/forked/: custom-node-list.json  extension-node-map.json
node_db/legacy/: custom-node-list.json  model-list.json
node_db/new/: custom-node-list.json  extension-node-map.json  model-list.json
node_db/tutorial/: custom-node-list.json  extension-node-map.json  scan.sh
notebooks/: comfyui_colab.ipynb  comfyui_colab_with_manager.ipynb
scripts/: colab-dependencies.py  install-comfyui-venv-linux.sh  install-comfyui-venv-win.bat  install-manager-for-portable-version.bat  update-fix.py
